[package]
name = "ahelp"
version = "0.1.0"
edition = "2024"
authors = ["qzwtrp"]
description = "AI Linux terminal assistant — powered by Gemini"
license = "MIT"
repository = "https://github.com/qzwtrp/ahelp"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
colored = "2"
dirs = "6.0.0"
toml = "1.1.2"

[[bin]]
name = "ahelp"
path = "src/main.rs"

[[bin]]
name = "jarvis"
path = "src/main.rs"
